[gd_scene load_steps=2 format=3 uid="uid://bnpgb8wcppn2l"]

[ext_resource type="Script" path="res://scenes/test_integration_scene.gd" id="1"]

[node name="TestIntegrationScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "UCS - Test di Integrazione Sistema"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TestAtleticaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Esegui Prova di Atletica (CD 15)"

[node name="TestInformaticaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Esegui Prova di Informatica (CD 12)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][b]Risultati dei test verranno mostrati qui[/b][/center]"

[connection signal="pressed" from="VBoxContainer/TestAtleticaButton" to="." method="_on_test_atletica_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TestInformaticaButton" to="." method="_on_test_informatica_button_pressed"] 